IOTMAPCOMP-73 : Alignement des labels IOTMAPCOMP-76 : correction regression add / remove / add

--- a/src/iotMapManager/iotMapManager.css
+++ b/src/iotMapManager/iotMapManager.css
@@ -141,16 +141,24 @@
   position: absolute;
   top:35px;
   left:35px;
+  width:30px;
+  height:30px;
   font-size:30px;
+  text-align: center;
+
 }
 
 .container .labelUnselected{
   position: absolute;
-  top:22px;
-  left:36px;
+  top:32px;
+  left:32px;
+  width:36px;
+  height:36px;
   font-size:36px;
   font-family: 'Helvetica Neue';
   font-weight: bold;
+  text-align: center;
+  line-height:36px;
 }
 
 
@@ -158,16 +166,24 @@
   position: absolute;
   top:30px;
   left:30px;
+  width:40px;
+  height:40px;
   font-size:40px;
+  text-align: center;
+  line-height:40px;
 }
 
 .container .labelSelected{
   position: absolute;
-  top:16px;
-  left:34px;
+  top:28px;
+  left:28px;
+  width:44px;
+  height:44px;
   font-size:44px;
   font-family: 'Helvetica Neue';
   font-weight: bold;
+  text-align: center;
+  line-height:44px;
 }
 
 .container .shadowSelected{
